# DAQ-CLI

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  cli-design.md  firmware-compatibility.md  install-on-new-pc.md  release-checklist.md  usage.md
profiles/: example.template.yaml  example.yaml
scripts/: build_release.ps1
src/daq_cli/: __init__.py  main.py
src/daq_cli/application/: acquire_service.py  board_service.py  config_models.py  decode_service.py  models.py  monitor_service.py  multi_decode_service.py  profile_service.py  telemetry_service.py
src/daq_cli/cli/: acquire.py  app.py  board.py  common.py  decode.py  group.py  monitor.py  profile.py  wave.py
src/daq_cli/domain/: device.py  group.py
src/daq_cli/infrastructure/: __init__.py  config_loader.py  multi_board_decode.py  tcp_sent_decode.py  tcp_sent_protocol.py  wave_monitor.py
src/daq_cli/infrastructure/adapters/: __init__.py  legacy_board_adapter.py  legacy_capture_runner.py  legacy_multi_capture_runner.py  legacy_runtime.py
src/daq_cli/monitoring_samples/: __init__.py  demo_frames.json  replay_dump.txt
src/daq_cli/presentation/: __init__.py  wave_monitor_viewer.py
src/daq_cli/presentation/console/: __init__.py  printers.py
tests/: test_acquire_single_monitoring.py  test_board_send_mode.py  test_decode.py  test_multi_wave_watch.py  test_wave_monitor.py
