[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daq-cli"
version = "0.1.0"
description = "CLI tooling for DAQ board configuration, acquisition, monitoring, and waveform viewing."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12,<1.0",
    "rich>=13.0",
]

[project.scripts]
daq = "daq_cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
